@@ -1,0 +1,2 @@
+libnames := cspaddata
+libsrcs_cspaddata := src/ElementV1.cc
