@@ -3,5 +3,5 @@ ifneq ($(findstring ppc-rtems-rce,$(tgt_arch)),)
 packages := xtc
 else
 packages := ipimb encoder pnCCD acqiris camera evr opal1k pulnix control xtc \
-	    epics bld princeton fccd app
+	    epics bld princeton fccd cspad app
 endif
