@@ -1,3 +1,4 @@
+2010-Jun-24	weaver			Added Cspad preliminary definitions.
 2010-Jun-15	weaver  Tag V02-04-00.  Added value method to encoder/DataV1.  Added pulnix/TM6740ConfigV2, fccd/FccdConfigV2.
 2010-Jun-06	weaver	Tag V02-02-00.  Added some XPP DetInfo entries.  Added TM6740 to xtcreader.
 2010-May-18	weaver			Added evr/IOConfigV1 class for describing EVR IO cabling.
